scripts/nullness/original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8.txt
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestCase.java:64: error: [argument] incompatible argument for parameter exception of TestCase.tearingDown.
            tearingDown(exception);
                        ^
  found   : @Initialized @Nullable Throwable
  required: @Initialized @NonNull Throwable
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:23: error: [dereference.of.nullable] dereference of possibly-null reference expected
        if (!expected.equals(actual)) throw new AssertionError();
             ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:26: error: [dereference.of.nullable] dereference of possibly-null reference expected
        if (!expected.equals(actual)) throw new AssertionError(message);
             ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:59: error: [argument] incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual)) throw new AssertionError(reason);
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:62: error: [argument] incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual)) throw new AssertionError();
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:27: error: [assignment] incompatible types in assignment.
        recognizerExpressionsTestcase = null;
                                        ^
  found   : null (NullType)
  required: @Initialized @NonNull PatternRecognizer
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:28: error: [assignment] incompatible types in assignment.
        recognizerExpressionsTestsuite=null;
                                       ^
  found   : null (NullType)
  required: @Initialized @NonNull PatternRecognizer
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:29: error: [assignment] incompatible types in assignment.
        recognizerTags = null;
                         ^
  found   : null (NullType)
  required: @Initialized @NonNull RecognizerTag
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/PatternRecognizer.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: matcher
    public PatternRecognizer(String expression)throws PatternSyntaxException{
           ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:27: error: [argument] incompatible argument for parameter expecteds of Assert.assertArrayEquals.
        Assert.assertArrayEquals("Arrays have different value",(Double[])suite.getContext().get("list1"),(Double[])suite.getContext().get("list2"));
                                                               ^
  found   : @Initialized @NonNull Double @Initialized @Nullable []
  required: @Initialized @NonNull Double @Initialized @NonNull []
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:27: error: [argument] incompatible argument for parameter actuals of Assert.assertArrayEquals.
        Assert.assertArrayEquals("Arrays have different value",(Double[])suite.getContext().get("list1"),(Double[])suite.getContext().get("list2"));
                                                                                                         ^
  found   : @Initialized @NonNull Double @Initialized @Nullable []
  required: @Initialized @NonNull Double @Initialized @NonNull []
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: [unboxing.of.nullable] unboxing a possibly-null reference (Boolean)suite.getContext().get("trueCondition")
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                   ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:49: error: [initialization.fields.uninitialized] the constructor does not initialize fields: context, suiteFather
    public TestSuite(String testname) {
           ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:55: error: [initialization.fields.uninitialized] the constructor does not initialize fields: context, suiteFather
    public TestSuite() {
           ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:56: error: [assignment] incompatible types in assignment.
        this.testname=null;
                      ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:103: error: [argument] incompatible argument for parameter exception of TestSuite.tearingDown.
                tearingDown(exception);
                            ^
  found   : @Initialized @Nullable Throwable
  required: @Initialized @NonNull Throwable
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestRunner.java:22: error: [initialization.static.field.uninitialized] static field testCreator not initialized
    private static TestCreator testCreator;
                               ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:17: error: [initialization.fields.uninitialized] the constructor does not initialize fields: nameCase, time, throwable, fileWriter, printer
    public XmlPrinter() {
           ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:19: error: [method.invocation] call to inicializar() not allowed on the given receiver.
        inicializar();
                   ^
  found   : @UnderInitialization @NonNull XmlPrinter
  required: @Initialized @NonNull XmlPrinter
19 errors
